syntax = "proto3";

package demo.service.proto;

option go_package="./;demoapi";

service DemoService {
   rpc Echo(EchoData) returns (EchoData);
   rpc Login(LoginRequest) returns (LoginResponse);
}

message FullName {
   string given_name = 1;
   string family_name = 2;
}

message EchoData {
   string message = 1;
   int64 id = 2;
   FullName full_name = 3;
   repeated string emails = 4;
   optional string description = 10;
}

message LoginRequest {
   string username = 1;
   string password = 2;
}

message LoginResponse {
   bool connected = 1;
}

